Fixed active hover state after unfavoriting item on mobile

--- a/src/components/ItemCard/ItemCard.module.scss
+++ b/src/components/ItemCard/ItemCard.module.scss
@@ -29,9 +29,6 @@
   &:not(.favorited) {
     stroke: $favorite;
     fill: transparent;
-    &:hover {
-      fill: $favorite;
-    }
   }
 }
 
@@ -81,6 +78,14 @@
   }
   .itemCardWrapper.large {
     width: calc(40% - 10px);
+  }
+
+  .favorite {
+    &:not(.favorited) {
+      &:hover {
+        fill: $favorite;
+      }
+    }
   }
 }
 
